# conan-collier

./: .travis.yml  00_add_definitions.patch  FindCOLLIER.cmake  LICENSE  README.md  build.py  conanfile.py
.travis/: install.sh
examples/: CMakeLists.txt  Makefile  README.md  conanfile.txt  meson.build  test_collier.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
